Fix hr white spaces

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -44,8 +44,8 @@ p {
 
 hr {
 	color: var(--color-middleground);
-	margin-bottom: var(--space-default);
-	margin-top: var(--space-default);
+	margin-bottom: var(--space-large);
+	margin-top: var(--space-large);
 	padding-left: var(--space-large);
 }
 
